org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/ShadowingTests_ImportAndInnerClassesNamesAreTheSameBadCase1_Rdef.alf.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.testsuite.SysMLXtextTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
		File {from ="/src/DependencyOuterPackage_Feature_Rdef.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
				File {from ="/src/DependencyOuterPackage_Feature_Rdef.alf"}
			}
		}
	}
END_SETUP 
*/

package test{
	import OuterPackage::*;
	feature A{
		feature a2{}
	}
	//* XPECT errors --- 
	"Couldn't resolve reference to Feature 'A::a1'." at "A::a1"
	"The feature 'type' of 'org.omg.sysml.lang.sysml.impl.FeatureImpl@646c0a67{file:/C:/install_dir/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/a_ShadowingTests_ImportAndInnerClassesNamesAreTheSameBadCase1_Rdef.alf.xt#//@ownedRelationship.2/@ownedRelatedElement.0}' with 0 values must have at least 1 values" at "B redefines A::a1 {}"
	--- */
	feature B redefines A::a1 {} 
}
